2001-11-13  Neil Jerram  <neil@ossau.uklinux.net>

	* guile.texi: Replaced by autogenerated libguile version.

2001-11-12  Neil Jerram  <neil@ossau.uklinux.net>

	* docstring.el, README: Sync up with unstable version of these
	files.

2001-04-03  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* guile.texi: Automated docstring merging.

2001-03-23  Neil Jerram  <neil@ossau.uklinux.net>

	* ChangeLog, README, docstring.el, guile.texi: New files.
