@@ -1,3 +1,12 @@
+2002-03-12  Neil Jerram  <neil@ossau.uklinux.net>
+
+	docstring.el (make-module-description-list): Exclude @deffn's with
+	category {C Function}.
+	(docstring-process-alist): Bind key "d" to
+	docstring-ediff-this-line in the docstring output buffer.
+        (docstring-libguile-directory, docstring-display-location,
+	docstring-show-source): New.
+
 2001-11-13  Neil Jerram  <neil@ossau.uklinux.net>
 
 	* guile.texi: Replaced by autogenerated libguile version.
